--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,16 @@
     "builds": [
         {
             "src": "package.json",
-            "use": "@vercel/static-build"
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "build"
+            }
         }
     ],
     "routes": [
         {
-            "handle": "filesystem"
-        },
-        {
             "src": "/(.*)",
             "dest": "/index.html"
         }
-    ],
-    "framework": "vite"
+    ]
 }
