--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "lucide-react": "^0.516.0",
     "memfs": "^4.17.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
+    "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
